--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,6 @@ notifications:
   webhooks:
     urls:
       - https://wizeline-webhooks.appspot.com/travis/notifications
+    on_success: always
+    on_failure: always
+    on_start: always
