--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "name": "travieso",
   "description": "Show TravisCI build jobs on Github.",
   "repository": "https://github.com/wizeline/travieso",
+  "logo": "https://github.com/wizeline/travieso/blob/master/travieso.png",
   "keywords": ["python", "flask", "github", "travis", "ci", "pull requests", "status"],
   "env": {
     "GITHUB_TOKEN": {
